# ShaysBot

./: .actrc  .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  act_event.json  compose.example.yaml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-binary.yml  build-image.yml  release.yml
example-config/: global-settings.toml
example-config/local-settings/: ExampleBot.toml
src/: chat.rs  config.rs  discord.rs  encryption.rs  event.rs  lib.rs  main.rs  ncr.rs  packet.rs  prelude.rs  settings.rs  state.rs  trapdoors.rs
src/chat/: api.rs  discord.rs  minecraft.rs  mod.rs
src/command/: about.rs  bot.rs  discord.rs  echo.rs  hello.rs  help.rs  lib.rs  mod.rs  ncr.rs  online.rs  pearl.rs  ping.rs  prelude.rs  seed.rs  sleep.rs
src/commands/: about.rs  hello.rs  interact.rs  join.rs  leave.rs  lib.rs  mod.rs  ncr.rs  online.rs  pearl.rs  ping.rs  playtime.rs  prelude.rs  seen.rs  whitelist.rs
src/commands/handlers/: discord.rs  minecraft.rs  mod.rs  prelude.rs
src/events/: chat.rs  disconnect.rs  init.rs  login.rs  mod.rs  packet.rs  prelude.rs
src/minecraft/: anti_afk.rs  auto_eat.rs  auto_pearl.rs  auto_totem.rs  mod.rs  pearl_tracker.rs  prelude.rs
src/minecraft/commands/: mod.rs  pearl.rs  playtime.rs  prelude.rs  seen.rs
src/modules/: anti_afk.rs  auto_eat.rs  auto_exit.rs  auto_kill.rs  auto_leave.rs  auto_look.rs  auto_pearl.rs  auto_totem.rs  auto_whitelist.rs  discord_logger.rs  logger.rs  mod.rs
src/packets/: block_update.rs  entity_add.rs  entity_remove.rs  mod.rs  prelude.rs
src/parsers/: discord.rs  http_api.rs  minecraft.rs  mod.rs
src/plugins/: anti_afk.rs  auto_eat.rs  auto_exit.rs  auto_look.rs  auto_pearl.rs  auto_totem.rs  block_state_tracker.rs  discord_event_logger.rs  discord_tracker.rs  ender_pearl_tracker.rs  game_tick_tracker.rs  mod.rs  pearl_tracker.rs  player_profile_tracker.rs  prelude.rs  settings.rs  trapdoors.rs
src/plugins/commands/: discord.rs  mod.rs  pearl.rs  playtime.rs  prelude.rs  seen.rs  whitelist.rs
src/plugins/commands/handlers/: discord.rs  minecraft.rs  mod.rs
src/settings/: global.rs  local.rs  mod.rs  stasis.rs
src/trackers/: block_state.rs  ender_pearl.rs  game_tick.rs  mod.rs  player_profile.rs
